# sandbox-world

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/metalworld-plan/: SKILL.md
.github/workflows/: release.yml
assets/animals/: dinosaur.glb  horse.glb
assets/shaders/: block_array.wgsl
guardrails/: 01_architecture_guardrails.txt  02_traversal_contract_3d_voxel.txt  03_verticality_and_recovery.txt  04_camera_guardrails_3d.txt  05_pixel_perfect_rendering.txt  06_movement_contact_contract.txt  07_enemy_design_guardrails.txt  08_global_tuning_rules.txt  09_known_risks_and_deferrals.txt  METALWORLD_CURSOR_GUARDRAIL.txt  README_START_HERE.txt  source_code_documentation_guardrail.txt
src/: animals.rs  block_types.rs  buildings.rs  chunk.rs  chunk_manager.rs  dev_tools.rs  lighting.rs  main.rs  player.rs  ray_cast.rs  save_load.rs  settings.rs  sky.rs  terrain.rs  trees.rs  ui.rs  voxel_light.rs
